--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Install dependencies
         run: npm install
       
-      - name: Install wrangler
-        run: npm install -g wrangler
+      - name: Install Wrangler
+        run: npm install --save-dev wrangler@latest  # 替换全局安装为本地安装最新版本
       
       - name: Check and Create KV Namespace
         env:
@@ -30,7 +30,7 @@ jobs:
         run: |
           KV_NAMESPACE="SUBLINK_KV"
           echo "Checking for KV namespace: $KV_NAMESPACE"
-          if ! LIST_OUTPUT=$(wrangler kv namespace list 2>&1); then
+          if ! LIST_OUTPUT=$(npx wrangler kv namespace list 2>&1); then
             echo "Error getting KV namespace list: $LIST_OUTPUT"
             exit 1
           fi
@@ -47,7 +47,7 @@ jobs:
           
           if [ -z "$KV_ID" ]; then
               echo "KV namespace $KV_NAMESPACE does not exist. Creating..."
-              CREATE_OUTPUT=$(wrangler kv namespace create "sublink-worker-$KV_NAMESPACE" 2>&1)
+              CREATE_OUTPUT=$(npx wrangler kv namespace create "sublink-worker-$KV_NAMESPACE" 2>&1)
               echo "Create KV namespace output: $CREATE_OUTPUT"
               KV_ID=$(echo "$CREATE_OUTPUT" | grep -o '[0-9a-f]\{32\}')
               
