--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,13 +15,16 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '21'
+          node-version: '22'  # 与日志中的 Node.js 22.16.0 保持一致
+      
+      - name: Install pnpm
+        run: npm install -g pnpm@10.11.1  # 与日志中的 pnpm 版本一致
       
       - name: Install dependencies
-        run: npm install
+        run: pnpm install --frozen-lockfile
       
       - name: Install Wrangler
-        run: npm install --save-dev wrangler@latest  # 替换全局安装为本地安装最新版本
+        run: npm install --save-dev wrangler@latest  # 本地安装最新 Wrangler
       
       - name: Check and Create KV Namespace
         env:
